# Crypto-Arbitrage-Engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: config.json
include/: BinanceClient.hpp  Config.hpp  Graph.hpp  OrderBook.hpp  SimulationEngine.hpp  StatsCollector.hpp
src/: main.cpp
tests/: test_config.cpp  test_graph.cpp  test_simulation.cpp
